--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@ img[alt="www.000webhost.com"]{display:none;}
 .Estilo4 {color: #FFFFFF}
 </style>
 <body>
-<div id="controller" style=" height:800;background-image:url(https://hazmemiweb.es/PS4/900/img/ps4-controller.png) ; margin-bottom:-58px; margin-top:-80px; background-repeat:no-repeat; background-position:center;"><iframe
+<div id="controller" style=" height:800;background-image:url(https://ps4xploit900.github.io/jailbreak/PS4/900/img/ps4-controller.png) ; margin-bottom:-58px; margin-top:-80px; background-repeat:no-repeat; background-position:center;"><iframe
     width="300"
     height="250" 
 	frameBorder="0"
 	scrolling="no"
     src="https://leeful.github.io/9v4/index.html"></iframe><br><br><br><br><div id="menu" style="margin-left:45px;"><img src="img/icon-goldhen.png" vspace="2"><br>
-    <a href="https://mour0ne.github.io/ps4xploit/PS4/900/index2.html"><img src="img/icon-options.png" border="0"></a>
+    <a href="https://ps4xploit900.github.io/jailbreak/PS4/900/index2.html"><img src="img/icon-options.png" border="0"></a>
     
     </div>
 </details></div>
