--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html manifest="Cache.manifest">
 <head><!-- PS4 Jailbreak Host 9.00FW > Special Thanks to: @leeful @karo_sharifi SiSTR0 . And everyone who contributes to the scene. Website by Mouuu @_mour0ne_ -Youtube: Mouuu -->
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>PS4 XPLOIT 900 HOST design by Mouuu</title>
+<title>PS4 XPLOIT 900 HOST design by Mouuu</title><link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'>
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css'>
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.2.1/font-awesome-animation.min.css'>
 <style type="text/css">
 <!--
 .Estilo1 {color: #FF0000}
@@ -45,6 +47,221 @@ details {
 </style><style>
 img[alt="www.000webhost.com"]{display:none;}
 .Estilo4 {color: #FFFFFF}
+
+
+
+.alert>.start-icon {
+    margin-right: 0;
+    min-width: 20px;
+    text-align: center;
+}
+
+.alert>.start-icon {
+    margin-right: 5px;
+}
+
+.greencross
+{
+  font-size:18px;
+      color: #25ff0b;
+    text-shadow: none;
+}
+
+.alert-simple.alert-success
+{
+  border: 1px solid rgba(36, 241, 6, 0.46);
+    background-color: rgba(7, 149, 66, 0.12156862745098039);
+    box-shadow: 0px 0px 2px #259c08;
+    color: #0ad406;
+  text-shadow: 2px 1px #00040a;
+  transition:0.5s;
+  cursor:pointer;
+  
+}
+.alert-success:hover{
+  background-color: rgba(7, 149, 66, 0.35);
+  transition:0.5s;
+}
+.alert-simple.alert-info
+{
+  border: 1px solid rgba(6, 44, 241, 0.46);
+    background-color: rgba(7, 73, 149, 0.12156862745098039);
+    box-shadow: 0px 0px 2px #0396ff;
+    color: #0396ff;
+  text-shadow: 2px 1px #00040a;
+  transition:0.5s;
+  cursor:pointer;
+}
+
+.alert-info:hover
+{
+  background-color: rgba(7, 73, 149, 0.35);
+  transition:0.5s;
+}
+
+.blue-cross
+{
+  font-size: 18px;
+    color: #0bd2ff;
+    text-shadow: none;
+}
+
+.alert-simple.alert-warning
+{
+      border: 1px solid rgba(241, 142, 6, 0.81);
+    background-color: rgba(220, 128, 1, 0.16);
+    box-shadow: 0px 0px 2px #ffb103;
+    color: #ffb103;
+    text-shadow: 2px 1px #00040a;
+  transition:0.5s;
+  cursor:pointer;
+	z-index:1;
+	width:800px;
+	font-size:15px;
+	
+}
+
+.alert-warning:hover{
+  background-color: rgba(220, 128, 1, 0.33);
+  transition:0.5s;
+}
+
+.warning
+{
+      font-size: 12px;
+    color: #ffb40b;
+    text-shadow: none;
+}
+
+.alert-simple.alert-danger
+{
+  border: 1px solid rgba(241, 6, 6, 0.81);
+    background-color: rgba(220, 17, 1, 0.16);
+    box-shadow: 0px 0px 2px #ff0303;
+    color: #ff0303;
+    text-shadow: 2px 1px #00040a;
+  transition:0.5s;
+  cursor:pointer;
+}
+
+.alert-danger:hover
+{
+     background-color: rgba(220, 17, 1, 0.33);
+  transition:0.5s;
+}
+
+.danger
+{
+      font-size: 18px;
+    color: #ff0303;
+    text-shadow: none;
+}
+
+.alert-simple.alert-primary
+{
+  border: 1px solid rgba(6, 241, 226, 0.81);
+    background-color: rgba(1, 204, 220, 0.16);
+    box-shadow: 0px 0px 2px #03fff5;
+    color: #03d0ff;
+    text-shadow: 2px 1px #00040a;
+  transition:0.5s;
+  cursor:pointer;
+}
+
+.alert-primary:hover{
+  background-color: rgba(1, 204, 220, 0.33);
+   transition:0.5s;
+}
+
+.alertprimary
+{
+      font-size: 18px;
+    color: #03d0ff;
+    text-shadow: none;
+}
+
+.square_box {
+    position: absolute;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+    border-top-left-radius: 45px;
+    opacity: 0.302;
+}
+
+.square_box.box_three {
+    background-image: -moz-linear-gradient(-90deg, #290a59 0%, #3d57f4 100%);
+    background-image: -webkit-linear-gradient(-90deg, #290a59 0%, #3d57f4 100%);
+    background-image: -ms-linear-gradient(-90deg, #290a59 0%, #3d57f4 100%);
+    opacity: 0.059;
+    left: -80px;
+    top: -60px;
+    width: 500px;
+    height: 500px;
+    border-radius: 45px;
+}
+
+.square_box.box_four {
+    background-image: -moz-linear-gradient(-90deg, #290a59 0%, #3d57f4 100%);
+    background-image: -webkit-linear-gradient(-90deg, #290a59 0%, #3d57f4 100%);
+    background-image: -ms-linear-gradient(-90deg, #290a59 0%, #3d57f4 100%);
+    opacity: 0.059;
+    left: 150px;
+    top: -25px;
+    width: 550px;
+    height: 550px;
+    border-radius: 45px;
+}
+
+.alert:before {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: calc(100% - 44px);
+    border-left: 1px solid;
+    border-right: 2px solid;
+    border-bottom-right-radius: 3px;
+    border-top-right-radius: 3px;
+    left: 0;
+    top: 50%;
+    transform: translate(0,-50%);
+      height: 20px;
+}
+
+.fa-times
+{
+-webkit-animation: blink-1 2s infinite both;
+	        animation: blink-1 2s infinite both;
+}
+
+
+/**
+ * ----------------------------------------
+ * animation blink-1
+ * ----------------------------------------
+ */
+@-webkit-keyframes blink-1 {
+  0%,
+  50%,
+  100% {
+    opacity: 1;
+  }
+  25%,
+  75% {
+    opacity: 0;
+  }
+}
+@keyframes blink-1 {
+  0%,
+  50%,
+  100% {
+    opacity: 1;
+  }
+  25%,
+  75% {
+    opacity: 0;
+  }
+}
 </style>
 <body>
 <div id="controller" style=" height:800;background-image:url(https://ps4xploit900.github.io/jailbreak/img/ps4-controller.png) ; margin-bottom:-58px; margin-top:-80px; background-repeat:no-repeat; background-position:center;"><iframe
@@ -54,14 +271,47 @@ img[alt="www.000webhost.com"]{display:none;}
 	scrolling="no"
     src="https://leeful.github.io/9v4/index.html"></iframe><br><br><br><br><div id="menu" style="margin-left:45px;"><img src="img/icon-goldhen.png" vspace="2"><br>
     <a href="https://ps4xploit900.github.io/jailbreak/PS4/900/payload.html"><img src="img/icon-options.png" border="0"></a>
+    <!-- partial:index.partial.html -->
+<section>
+  <div class="square_box box_three"></div>
+  <div class="square_box box_four"></div>
+  <div class="container mt-5" style="overflow: hidden;
+    margin-top: -0px;
+	margin-bottom:-50px;
+	margin-left:5px;
+	z-index:0; float:right;">
+    <div class="row">
+
     
+
+      <div class="col-sm-12">
+        <div class="alert fade alert-simple alert-warning alert-dismissible text-left font__family-montserrat font__size-16 font__weight-light brk-library-rendered rendered show" role="alert" data-brk-library="component__alert">
+          <button type="button" class="close font__size-18" data-dismiss="alert">
+									<span aria-hidden="true">
+										<i class="fa fa-times warning"></i>
+									</span>
+									<span class="sr-only">Close</span>
+		  </button>
+          <i class="start-icon fa fa-exclamation-triangle faa-flash animated"></i><img src="https://ps4xploit900.000webhostapp.com/img/icon-ps.ico" width="28" height="28"> 
+          <strong class="font__weight-semibold">Once goldHEN is activated,</strong> if you want to send PAYLOADS, activate it first in goldhen options ENABLE binloader server<br><br><div align="center">
+  <p style="border: 2px solid #FCFF33; padding: 10px;  background-color:#000000; width:850px; float:left; color: black; font-family: arial,helvetica; font-size: 16px; font-weight: bold;"><span class="Estilo1">Remember:</span> <span class="Estilo4">If the browser indicates that &quot;There is not enough free system memory&quot; it is  normal, try again.</span> </p></div>
+      </div>
+
+   
+
+     
+
+      </div>
+
     </div>
+  </div>
+<!-- partial -->
+    </div><br><br><br>
 </details></div>
 </div>
-<div align="center">
-  <p style="border: 2px solid #FCFF33; padding: 10px; background-color:#000000; width:919px; color: black; font-family: arial,helvetica; font-size: 16px; font-weight: bold;"><span class="Estilo1">Remember:</span> <span class="Estilo4">If the browser indicates that &quot;There is not enough free system memory&quot; it is  normal, try again.</span> </p>
+
   <br>
-  <p><span style="margin-top: 15px; color: yellow;">Special Thanks to:<a href="https://twitter.com/leeful74" target="_blank" style="color:#FFFFFF; margin-left: 15px;text-decoration: none;">@leeful</a><a href="https://twitter.com/karo_sharifi" target="_blank" style="color:#FFFFFF; margin-left: 15px;text-decoration: none;">@karo_sharifi</a><a style="color:white; margin-left: 15px;">SiSTR0 ... <span class="Estilo3">And everyone who contributes to the scene</span></a><a href="https://www.youtube.com/channel/UCtPlY2qHNNsAOlg6jQmUlXA" target="_blank" class="Estilo3" style="color:white; margin-left: 15px;text-decoration: none;">Website by Mouuu </a></span> </p>
-</div>
+  <p><span style="margin-top: 15px; color: yellow;">&nbsp;Special Thanks to:<a href="https://twitter.com/leeful74" target="_blank" style="color:#FFFFFF; margin-left: 15px;text-decoration: none;">@leeful</a><a href="https://twitter.com/karo_sharifi" target="_blank" style="color:#FFFFFF; margin-left: 15px;text-decoration: none;">@karo_sharifi</a><a style="color:white; margin-left: 15px;">SiSTR0 &nbsp;... <span class="Estilo3">And everyone who contributes to the &nbsp;scene</span></a><a href="https://www.youtube.com/channel/UCtPlY2qHNNsAOlg6jQmUlXA" target="_blank" class="Estilo3" style="color:white; margin-left: 15px;text-decoration: none;">Website by Mouuu </a></span> </p><br>
+</div><script src="https://ps4xploit900.github.io/jailbreak/PS4/900//simple-notify.min.js"></script>
 </body>
 </html>
