--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>PS4 XPLOIT 900 HOST design by Mouuu</title><link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'>
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css'>
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.2.1/font-awesome-animation.min.css'>
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.2.1/font-awesome-animation.min.css'><link rel="shortcut icon" href="https://ps4xploit900.000webhostapp.com/img/icon-ps.ico">
 <style type="text/css">
 <!--
 .Estilo1 {color: #FF0000}
@@ -294,7 +294,7 @@ img[alt="www.000webhost.com"]{display:none;}
 		  </button>
           <i class="start-icon fa fa-exclamation-triangle faa-flash animated"></i><img src="https://ps4xploit900.000webhostapp.com/img/icon-ps.ico" width="28" height="28"> 
           <strong class="font__weight-semibold">Once goldHEN is activated,</strong> if you want to send PAYLOADS, activate it first in goldhen options ENABLE binloader server<br><br><div align="center">
-  <p style="border: 2px solid #FCFF33; padding: 10px;  background-color:#000000; width:850px; float:left; color: black; font-family: arial,helvetica; font-size: 16px; font-weight: bold;"><span class="Estilo1">Remember:</span> <span class="Estilo4">If the browser indicates that &quot;There is not enough free system memory&quot; it is  normal, try again.</span> </p></div>
+  <p style="border: 2px solid #FCFF33; padding: 10px; background-color:#000000; width:850px; float:left;  color: black; font-family: arial,helvetica; font-size: 16px; font-weight: bold;"><span class="Estilo1">Remember:</span> <span class="Estilo4">If the browser indicates that &quot;There is not enough free system memory&quot; it is  normal, try again.</span> </p></div>
       </div>
 
    
