--- a/index.html
+++ b/index.html
@@ -315,6 +315,13 @@ img[alt="www.000webhost.com"]{display:none;}
   <br>
   <p><span style="margin-top: 15px; color: yellow;"><span class="Estilo5">Special Thanks to:</span><a href="https://twitter.com/leeful74" target="_blank" style="color:#FFFFFF; margin-left: 15px;text-decoration: none;">leeful</a><a href="https://twitter.com/karo_sharifi" target="_blank" style="color:#FFFFFF; margin-left: 15px;text-decoration: none;">karo_sharifi</a><a href="https://github.com/ChendoChap" target="_blank" style="color:white; margin-left: 15px;text-decoration: none;">ChendoChap</a> <span class="Estilo4">SiSTR0</span> <span class="Estilo3">And everyone who contributes to the scene</span><a href="https://www.youtube.com/channel/UCtPlY2qHNNsAOlg6jQmUlXA" target="_blank" class="Estilo3 Estilo5" style="color:white; margin-left: 10px;text-decoration: none;">Website by <span class="Estilo6">Mouuu</span> </a></span> </p>
   <br>
-</div><script src="https://ps4xploit900.github.io/jailbreak/PS4/900/simple-notify.min.js"></script>
+</div>
+<script>
+if (window.applicationCache.status=='0'){window.location.replace("cache.html");}
+function PLdone(PL){
+msgs.innerHTML="PS4 Exploited & GoldHEN Loaded.<br>You Can Also Send A Payload To Port 9020 Now.";
+}</script>
+
+<script src="https://ps4xploit900.github.io/jailbreak/PS4/900/simple-notify.min.js"></script>
 </body>
 </html>
