--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 .Estilo1 {color: #FF0000}
 .Estilo5 {font-size: 10px}
 .Estilo6 {font-size: 12px}
+.Estilo7 {color: #FFFF00}
 -->
 </style>
 </head><style>
@@ -272,7 +273,8 @@ img[alt="www.000webhost.com"]{display:none;}
 	frameBorder="0"
 	scrolling="no"
     src="https://ps4xploit900.github.io/jailbreak/9v4/"></iframe><br><br><br><br><div id="menu" style="margin-left:45px;"><img src="img/icon-goldhen.png" vspace="2"><br>
-    <a href="https://ps4xploit900.github.io/jailbreak/PS4/900/payload.html"><img src="img/icon-options.png" border="0"></a>
+    <a href="https://ps4xploit900.github.io/jailbreak/PS4/900/payload.html"><img src="img/icon-options.png" border="0"></a><br>
+    <a href="https://ps4xploit900.github.io/jailbreak/9v4/index.html" class="Estilo7" style="font-family:"Times New Roman", Times, serif;">OFFLINE MODE</a>
     <!-- partial:index.partial.html -->
 <section>
   <div class="square_box box_three"></div>
