--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 .Estilo1 {color: #FF0000}
 .Estilo5 {font-size: 10px}
 .Estilo6 {font-size: 12px}
-.Estilo7 {color: #FFFF00}
+.Estilo7 {color: #FFFF00; text-align:center;
+}
 -->
 </style>
 </head><style>
