--- a/index.html
+++ b/index.html
@@ -286,9 +286,6 @@ img[alt="www.000webhost.com"]{display:none;}
 	margin-left:5px;
 	z-index:0; float:right;">
     <div class="row">
-
-    
-
       <div class="col-sm-12">
         <div class="alert fade alert-simple alert-warning alert-dismissible text-left font__family-montserrat font__size-16 font__weight-light brk-library-rendered rendered show" role="alert" data-brk-library="component__alert">
           <button type="button" class="close font__size-18" data-dismiss="alert">
@@ -311,7 +308,7 @@ img[alt="www.000webhost.com"]{display:none;}
     </div>
   </div>
 <!-- partial -->
-    </div><br><br><br>
+    </div><br><br>
 </details></div>
 </div>
 
