--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 .Estilo1 {color: #FF0000}
 .Estilo5 {font-size: 10px}
 .Estilo6 {font-size: 12px}
-.Estilo7 {color: #FFFF00; text-align:center;
-}
 -->
 </style>
 </head><style>
@@ -266,6 +264,7 @@ img[alt="www.000webhost.com"]{display:none;}
     opacity: 0;
   }
 }
+.Estilo8 {font-size: 18px}
 </style>
 <body>
 <div id="controller" style=" height:800;background-image:url(https://ps4xploit900.github.io/jailbreak/img/ps4-controller.png) ; margin-bottom:-58px; margin-top:-80px; background-repeat:no-repeat; background-position:center;"><iframe
@@ -276,7 +275,7 @@ img[alt="www.000webhost.com"]{display:none;}
     src="https://ps4xploit900.github.io/jailbreak/9v4/"></iframe><br><br>
   <div id="menu" style="margin-left:45px;"><img src="img/icon-goldhen.png" vspace="2"><br>
     <a href="https://ps4xploit900.github.io/jailbreak/PS4/900/payload.html"><img src="img/icon-options.png" border="0"></a><br>
-	<a href="https://ps4xploit900.github.io/jailbreak/9v4/index.html" style="color:#FFFFFF; font-family:"Times New Roman", Times, serif;">&nbsp;** XPLOIT OFFLINE **</a>
+	<a href="https://ps4xploit900.github.io/jailbreak/9v4/index.html" class="Estilo8" style="color:#FFFFFF; font-family:"Times New Roman", Times, serif;">&nbsp;** XPLOIT OFFLINE **</a>
     <!-- partial:index.partial.html -->
     <section>
   <div class="square_box box_three"></div>
