--- a/index.html
+++ b/index.html
@@ -264,7 +264,10 @@ img[alt="www.000webhost.com"]{display:none;}
     opacity: 0;
   }
 }
-.Estilo8 {font-size: 18px}
+.Estilo8 {
+	font-size: 18px;
+	font-family: "Times New Roman", Times, serif;
+}
 </style>
 <body>
 <div id="controller" style=" height:800;background-image:url(https://ps4xploit900.github.io/jailbreak/img/ps4-controller.png) ; margin-bottom:-58px; margin-top:-80px; background-repeat:no-repeat; background-position:center;"><iframe
