--- a/index.html
+++ b/index.html
@@ -277,10 +277,7 @@ img[alt="www.000webhost.com"]{display:none;}
 	scrolling="no"
     src="https://ps4xploit900.github.io/jailbreak/9v4/"></iframe><br><br><br>
   <div id="menu" style="margin-left:45px;"><img src="img/icon-goldhen.png" vspace="2"><br>
-    <a href="https://ps4xploit900.github.io/jailbreak/PS4/900/payload.html"><img src="img/icon-options.png" border="0" usemap="#Map" >
-<map name="Map">
-  <area shape="circle" coords="105,78,144" href="https://ps4xploit900.github.io/jailbreak/PS4/900/payload.html">
-</map></a><br>
+    <a href="https://ps4xploit900.github.io/jailbreak/PS4/900/payload.html"><img src="img/icon-options.png" border="0" ></a><br>
 	<a href="https://ps4xploit900.github.io/jailbreak/9v4/index.html" class="Estilo8" style="color:#FFFFFF; font-family:"Times New Roman", Times, serif;">&nbsp;** XPLOIT OFFLINE **</a>
     <!-- partial:index.partial.html -->
     <section>
