--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ img[alt="www.000webhost.com"]{display:none;}
 	scrolling="no"
     src="https://ps4xploit900.github.io/jailbreak/9v4/"></iframe><br><br><br>
   <div id="menu" style="margin-left:45px;"><img src="img/icon-goldhen.png" vspace="1"><br>
-    <a href="https://ps4xploit900.github.io/jailbreak/PS4/900/payload.html"><img src="img/buton-payloads.png" vspace="2" usemap="#links" ></a><br>
+    <a href="https://ps4xploit900.github.io/jailbreak/PS4/900/payload.html"><img src="img/icon-options.png" vspace="2" usemap="#links" ></a><br>
 	<a href="https://ps4xploit900.github.io/jailbreak/9v4/index.html" class="Estilo8" style="color:#FFFFFF; font-family:"Times New Roman", Times, serif;"><img src="img/icon-offline.png" width="199" height="30" border="0"></a>
     <!-- partial:index.partial.html -->
     <section>
