--- a/index.html
+++ b/index.html
@@ -299,8 +299,7 @@ img[alt="www.000webhost.com"]{display:none;}
 									<span class="sr-only">Close</span>
 		  </button>
           <i class="start-icon fa fa-exclamation-triangle faa-flash animated"></i><img src="https://ps4xploit900.000webhostapp.com/img/icon-ps.ico" width="28" height="28"> 
-          <strong class="font__weight-semibold">Once goldHEN is activated,</strong> if you want to send PAYLOADS, activate it first in goldhen options ENABLE binloader server<br><br><div align="center">
-  <p style="border: 2px solid #FCFF33; padding: 10px; background-color:#000000; width:850px; float:left;  color: black; font-family: arial,helvetica; font-size: 16px; font-weight: bold;"><span class="Estilo1">Remember:</span> <span class="Estilo4">If the browser indicates that &quot;There is not enough free system memory&quot; it is  normal, try again.</span> </p></div>
+          <strong class="font__weight-semibold">Once goldHEN is activated,</strong> if you want to send PAYLOADS, activate it first in goldhen options ENABLE binloader server<br><br>
       </div>
 
    
