--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ img[alt="www.000webhost.com"]{display:none;}
 									<span class="sr-only">Close</span>
 		  </button>
           <i class="start-icon fa fa-exclamation-triangle faa-flash animated"></i><img src="https://ps4xploit900.000webhostapp.com/img/icon-ps.ico" width="28" height="28"> 
-          <strong class="font__weight-semibold">Once goldHEN is activated,</strong> if you want to send PAYLOADS, activate it first in goldhen options ENABLE binloader server<br><br>
+          <strong class="font__weight-semibold">Remember: If the browser indicates that "There is not enough free system memory" it is normal, try again. Once goldHEN is activated,</strong> if you want to send PAYLOADS, activate it first in goldhen options ENABLE binloader server<br><br>
       </div>
 
    
