--- a/index.html
+++ b/index.html
@@ -301,17 +301,11 @@ img[alt="www.000webhost.com"]{display:none;}
           <i class="start-icon fa fa-exclamation-triangle faa-flash animated"></i><img src="https://ps4xploit900.000webhostapp.com/img/icon-ps.ico" width="28" height="28"> 
           <strong class="font__weight-semibold">Remember: If the browser indicates that "There is not enough free system memory" it is normal, try again. When goldHEN is activated,</strong> if you want to send PAYLOADS, activate it first in goldhen options ENABLE binloader server.
       </div>
-
-   
-
-     
-
       </div>
-
     </div>
   </div>
 <!-- partial -->
-  </div><br>
+  </div>
 </details></div>
 </div>
   <p><span style="margin-top: 15px; color: yellow;"><span class="Estilo5">Special Thanks to:</span><a href="https://twitter.com/leeful74" target="_blank" style="color:#FFFFFF; margin-left: 15px;text-decoration: none;">leeful</a><a href="https://twitter.com/karo_sharifi" target="_blank" style="color:#FFFFFF; margin-left: 15px;text-decoration: none;">karo_sharifi</a><a href="https://github.com/ChendoChap" target="_blank" style="color:white; margin-left: 15px;text-decoration: none;">ChendoChap</a> <span class="Estilo4">SiSTR0</span> <span class="Estilo3">And everyone who contributes to the scene</span><a href="https://www.youtube.com/channel/UCtPlY2qHNNsAOlg6jQmUlXA" target="_blank" class="Estilo3 Estilo5" style="color:white; margin-left: 10px;text-decoration: none;">Website by <span class="Estilo6">Mouuu</span> </a></span> </p>
