--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.2.1/font-awesome-animation.min.css'><link rel="shortcut icon" href="https://ps4xploit900.github.io/jailbreak/img/icon-ps.ico">
 <style type="text/css">
 <!--
-.Estilo1 {color: #FF0000}
 .Estilo5 {font-size: 10px}
 .Estilo6 {font-size: 12px}
 -->
@@ -308,7 +307,7 @@ img[alt="www.000webhost.com"]{display:none;}
   </div>
 </details></div>
 </div>
-  <p><span style="margin-top: 15px; color: yellow;"><span class="Estilo5">Special Thanks to:</span><a href="https://twitter.com/leeful74" target="_blank" style="color:#FFFFFF; margin-left: 15px;text-decoration: none;">leeful</a><a href="https://twitter.com/karo_sharifi" target="_blank" style="color:#FFFFFF; margin-left: 15px;text-decoration: none;">karo_sharifi</a><a href="https://github.com/ChendoChap" target="_blank" style="color:white; margin-left: 15px;text-decoration: none;">ChendoChap</a> <span class="Estilo4">SiSTR0</span> <span class="Estilo3">And everyone who contributes to the scene</span><a href="https://www.youtube.com/channel/UCtPlY2qHNNsAOlg6jQmUlXA" target="_blank" class="Estilo3 Estilo5" style="color:white; margin-left: 10px;text-decoration: none;">Website by <span class="Estilo6">Mouuu</span> </a></span> </p>
+  <p><span style="margin-top: 15px; color: yellow;"><span class="Estilo5 Estilo6">Special Thanks to:</span><a href="https://twitter.com/leeful74" target="_blank" style="color:#FFFFFF; margin-left: 15px;text-decoration: none;">leeful</a><a href="https://twitter.com/karo_sharifi" target="_blank" style="color:#FFFFFF; margin-left: 15px;text-decoration: none;">karo_sharifi</a><a href="https://github.com/ChendoChap" target="_blank" style="color:white; margin-left: 15px;text-decoration: none;">ChendoChap</a> <span class="Estilo4">SiSTR0</span> <span class="Estilo3">And everyone who contributes to the scene</span><a href="https://www.youtube.com/channel/UCtPlY2qHNNsAOlg6jQmUlXA" target="_blank" class="Estilo3 Estilo6" style="color:white; margin-left: 10px;text-decoration: none;">Website by Mouuu </a></span> </p>
   <br><br>
 </div>
 
