--- a/9v4/index.html
+++ b/9v4/index.html
@@ -13,7 +13,7 @@ img[alt="www.000webhost.com"]{display:none;}
 </head>
 <body onload="setTimeout(webkitXploit, 1500);">
 <script src="exploit.js"></script>
-<div id="msgs" class="info">Running Webkit Exploit, Please Wait ...</div>
+<div id="msgs" class="info"><img width="64px"  src="https://ps4xploit900.github.io/jailbreak/img/ps_logo_jailbreak.svg" /><br>Running Webkit Exploit, Please Wait ...</div>
 <script>
 if (window.applicationCache.status=='0'){window.location.replace("cache.html");}
 function PLdone(PL){
