--- a/9v4/index.html
+++ b/9v4/index.html
@@ -16,74 +16,16 @@ img[alt="www.000webhost.com"]{display:none;}
 </head>
 <body onload="setTimeout(webkitXploit, 1500);">
 <script src="exploit.js"></script>
-<div id="msgs" class="info"><svg
-   xmlns:dc="http://purl.org/dc/elements/1.1/"
-   xmlns:cc="http://web.resource.org/cc/"
-   xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-   xmlns:svg="http://www.w3.org/2000/svg"
-   xmlns="http://www.w3.org/2000/svg"
-   xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
-   xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
-   version="1.0"
-   id="Layer_1"
-   width="134.24748"
-   height="101.99763"
-   viewBox="0 0 612.092 560.54"
-   overflow="visible"
-   enable-background="new 0 0 612.092 560.54"
-   xml:space="preserve"
-   sodipodi:version="0.32"
-   inkscape:version="0.44.1"
-   sodipodi:docname="Playstation logo colour.svg"
-   sodipodi:docbase="C:\Documents and Settings\Sigurd\Mine dokumenter\Mine bilder"><metadata
-   id="metadata20"><rdf:RDF><cc:Work
-       rdf:about=""><dc:format>image/svg+xml</dc:format><dc:type
-         rdf:resource="http://purl.org/dc/dcmitype/StillImage" /></cc:Work></rdf:RDF></metadata><defs
-   id="defs18" /><sodipodi:namedview
-   inkscape:window-height="64"
-   inkscape:window-width="64"
-   inkscape:pageshadow="2"
-   inkscape:pageopacity="0.0"
-   guidetolerance="10.0"
-   gridtolerance="10.0"
-   objecttolerance="10.0"
-   borderopacity="1.0"
-   bordercolor="#666666"
-   pagecolor="#ffffff"
-   id="base"
-   inkscape:zoom="1.9023033"
-   inkscape:cx="145.65542"
-   inkscape:cy="98.001689"
-   inkscape:window-x="-4"
-   inkscape:window-y="-4"
-   inkscape:current-layer="g3" />
-<g
-   id="g3"
-   transform="translate(-61.68556,-312.8684)">
-
-	<path
-   clip-rule="evenodd"
-   d="M 395.06807,434.21345 L 394.60021,863.39514 L 279.61012,825.99696 L 279.61012,321.53515 L 426.38841,360.34125 C 520.34231,385.59251 577.83949,434.67697 576.90381,520.70189 C 575.96956,620.75529 529.69221,660.95773 439.47538,634.77658 L 439.47538,437.47977 C 439.47538,413.635 395.06807,412.23866 395.06807,434.21345 L 395.06807,434.21345 z "
-   id="path7"
-   style="fill:#de0029;fill-opacity:1;fill-rule:evenodd" />
-	<path
-   clip-rule="evenodd"
-   d="M 226.78568,742.76757 L 172.56056,761.00535 C 137.49733,773.16387 107.58489,744.64627 139.83807,732.95128 L 166.01346,723.60717 L 67.381005,692.27665 C 36.994899,702.56663 8.4787729,724.53999 10.3531,755.3983 C 12.223081,786.7187 83.74009,794.20296 138.90381,803.08643 C 190.32031,811.49773 237.06553,806.82349 279.60869,791.86223 L 279.60869,759.60031 L 226.78568,742.76757 L 226.78568,742.76757 z M 395.53446,863.39514 L 496.03688,828.32754 L 394.60021,796.07291 L 394.60021,861.05298 L 395.53446,863.39514 L 395.53446,863.39514 z "
-   id="path9"
-   style="fill:#f3c202;fill-opacity:1;fill-rule:evenodd" />
-	<path
-   clip-rule="evenodd"
-   d="M 662.91715,769.42531 L 664.78565,768.95457 C 708.72663,753.53123 727.42501,732.01703 722.75363,711.92089 C 715.27373,678.26121 661.51646,660.02348 578.77524,653.9442 C 519.41092,649.73926 460.98092,662.82627 403.95154,682.46035 L 394.60164,685.73681 L 496.97405,717.52794 L 556.80624,697.42166 C 619.44554,685.73681 644.69244,706.30513 584.38808,725.47573 L 554.46981,735.75553 L 662.91715,769.42531 L 662.91715,769.42531 z M 279.61012,620.75529 L 234.26272,636.17869 L 279.61012,650.2057 L 279.61012,620.75529 L 279.61012,620.75529 z "
-   id="path11"
-   style="fill:#326db3;fill-opacity:1;fill-rule:evenodd" />
-	<path
-   clip-rule="evenodd"
-   d="M 496.03688,828.32754 L 662.91715,769.42531 L 554.46695,735.75553 L 394.60021,790.45575 L 394.60021,796.07291 L 496.03688,828.32754 L 496.03688,828.32754 z M 279.61012,725.00349 L 226.78712,742.76906 L 279.61012,759.60031 L 279.61012,725.00349 L 279.61012,725.00349 z M 394.60021,752.5955 L 394.60021,685.73681 L 496.97262,717.52794 L 394.60021,752.5955 L 394.60021,752.5955 z M 166.01492,723.60717 L 279.60869,682.93251 L 279.60869,650.2057 L 234.26272,636.17869 L 69.718853,691.81461 C 69.250983,691.81461 68.316721,692.27665 67.38246,692.27665 L 166.01492,723.60717 L 166.01492,723.60717 z "
-   id="path13"
-   style="fill:#00aa9e;fill-opacity:1;fill-rule:evenodd" />
-
+<div id="msgs" class="info"><?xml version="1.0" encoding="UTF-8"?>
+<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="84px" height="64px" viewBox="0 0 84 64" version="1.1">
+<g id="surface1">
+<path style=" stroke:none;fill-rule:evenodd;fill:rgb(87.058824%,0%,16.078431%);fill-opacity:1;" d="M 45.195312 13.855469 L 45.140625 62.855469 L 32.027344 58.585938 L 32.027344 0.988281 L 48.769531 5.421875 C 59.484375 8.304688 66.042969 13.90625 65.9375 23.730469 C 65.832031 35.152344 60.550781 39.742188 50.261719 36.753906 L 50.261719 14.226562 C 50.261719 11.503906 45.195312 11.34375 45.195312 13.855469 Z M 45.195312 13.855469 "/>
+<path style=" stroke:none;fill-rule:evenodd;fill:rgb(95.294118%,76.078431%,0.784314%);fill-opacity:1;" d="M 26 49.082031 L 19.816406 51.164062 C 15.816406 52.554688 12.402344 49.296875 16.082031 47.960938 L 19.066406 46.894531 L 7.816406 43.316406 C 4.351562 44.492188 1.097656 47 1.3125 50.523438 C 1.527344 54.101562 9.683594 54.957031 15.976562 55.96875 C 21.839844 56.929688 27.171875 56.394531 32.027344 54.6875 L 32.027344 51.003906 Z M 45.25 62.855469 L 56.714844 58.851562 L 45.140625 55.167969 L 45.140625 62.585938 Z M 45.25 62.855469 "/>
+<path style=" stroke:none;fill-rule:evenodd;fill:rgb(19.607843%,42.745098%,70.196078%);fill-opacity:1;" d="M 75.75 52.125 L 75.960938 52.074219 C 80.972656 50.3125 83.105469 47.855469 82.574219 45.5625 C 81.71875 41.71875 75.589844 39.636719 66.152344 38.941406 C 59.378906 38.460938 52.714844 39.957031 46.210938 42.199219 L 45.140625 42.570312 L 56.820312 46.203125 L 63.644531 43.90625 C 70.789062 42.570312 73.667969 44.917969 66.789062 47.109375 L 63.378906 48.28125 Z M 32.027344 35.152344 L 26.851562 36.914062 L 32.027344 38.515625 Z M 32.027344 35.152344 "/>
+<path style=" stroke:none;fill-rule:evenodd;fill:rgb(0%,66.666667%,61.960784%);fill-opacity:1;" d="M 56.714844 58.851562 L 75.75 52.125 L 63.378906 48.28125 L 45.140625 54.527344 L 45.140625 55.167969 Z M 32.027344 47.054688 L 26 49.082031 L 32.027344 51.003906 Z M 45.140625 50.203125 L 45.140625 42.570312 L 56.820312 46.203125 Z M 19.070312 46.894531 L 32.027344 42.25 L 32.027344 38.515625 L 26.851562 36.914062 L 8.085938 43.265625 C 8.03125 43.265625 7.925781 43.316406 7.816406 43.316406 Z M 19.070312 46.894531 "/>
 </g>
-</svg><br>Running Webkit Exploit, Please Wait ...</div>
+</svg>
+<br>Running Webkit Exploit, Please Wait ...</div>
 <script>
 if (window.applicationCache.status=='0'){window.location.replace("cache.html");}
 function PLdone(PL){
