--- a/cache.html
+++ b/cache.html
@@ -1,6 +1,6 @@
 <html manifest="900.cache">
 
-<meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- mod host by mouuu-->
 <head>
 <title>PS4 XPLOIT 900 HOST design by Mouuu</title>
 <style>img[alt="www.000webhost.com"]{display:none;}
