--- a/offline/9v4/cache.html
+++ b/offline/9v4/cache.html
@@ -1,8 +1,8 @@
 <html manifest="900.cache">
 
 
-<!-- Mirrored from ps4xploit900.000webhostapp.com/9v4/cache.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 22 Jan 2022 13:35:04 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<!-- Special Thanks to:leeful karo_sharifi ChendoChap SiSTR0 And everyone who contributes to the scene Website by Mouuu -->
+<!-- ps4xploit900--><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /mod by mouuu -->
 <meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
 <title>PS4 XPLOIT 900 HOST design by Mouuu</title>
