--- a/offline/9v4/index.html
+++ b/offline/9v4/index.html
@@ -2,8 +2,7 @@
 
 <!-- PS4 Jailbreak Host 9.00FW > Special Thanks to: @leeful @karo_sharifi SiSTR0 . And everyone who contributes to the scene. Website by Mouuu @_mour0ne_ -Youtube: Mouuu -->
 
-<!-- Mirrored from ps4xploit900.000webhostapp.com/9v4/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 22 Jan 2022 13:35:02 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<!--  --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /mod by mouuu -->
 <meta http-equiv="content-type" content="text/html;charset=utf-8" /><link rel="shortcut icon" href="https://ps4xploit900.github.io/jailbreak/img/icon-ps.ico">
 <head>
 <title>PS4 XPLOIT 900 HOST design by Mouuu</title>
@@ -38,5 +37,4 @@ var PL1 = [233,136,16,0,0,243,15,30,250,85,186,4,0,0,0,83,72,137,245,72,137,251,
 
 <!-- PS4 Jailbreak Host 9.00FW > Special Thanks to: @leeful @karo_sharifi SiSTR0 . And everyone who contributes to the scene. Website by Mouuu @_mour0ne_ -Youtube: Mouuu -->
 
-<!-- Mirrored from ps4xploit900.000webhostapp.com/9v4/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 22 Jan 2022 13:35:03 GMT -->
 </html>
